# meshConverters

./: .gitmodules  CMakeLists.txt  COPYING  CTestConfig.cmake  Makefile  README.md  convert_dae_to_obj.cpp  convert_to_obj.cpp  install_prereqs.sh  meshconverters-config.cmake.in
vcglib/docs/: introduction to vcg.ppt
